--- a/app/globals.css
+++ b/app/globals.css
@@ -2,13 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 @layer components {
-  .btnBlue {
+  .btnB {
     @apply bg-blue-500 text-white py-1.5 px-4 rounded-md text-sm hover:bg-blue-600 transition;
   }
-  .btnOrange {
+  .btnO {
     @apply bg-orange-500 text-white py-1.5 px-4 rounded-md text-sm hover:bg-orange-600 transition;
   }
-  .btnRed {
+  .btnR {
     @apply bg-red-600 text-white py-1.5 px-4 rounded-md text-sm hover:bg-red-700 transition;
   }
 }
